--- a/sec/css/style.css
+++ b/sec/css/style.css
@@ -454,6 +454,11 @@ body {
     width: 80px;
     height: 30px;
     font-family: "BPG Glaho WEB Caps", sans-serif;
+    transition: 0.5s;
+}
+.sent button:hover {
+	transition: 0.5s;
+	background-color: gray;
 }
    /*sent*/
 
