--- a/sec/css/style.css
+++ b/sec/css/style.css
@@ -454,7 +454,8 @@ body {
     width: 80px;
     height: 30px;
     font-family: "BPG Glaho WEB Caps", sans-serif;
-    transition: 0.5s;
+    cursor: pointer;
+
 }
    /*sent*/
 
