--- a/geolab/css/style.css
+++ b/geolab/css/style.css
@@ -741,7 +741,7 @@
     .social-imgs {
         margin-top: 0px;
     }
-    .last{
+    .footer{
         margin-top: -330px;
     }
     .under-contact {
