--- a/geolab/css/style.css
+++ b/geolab/css/style.css
@@ -400,7 +400,7 @@
     transform: translateX(-50%);
     position: absolute;
     bottom: 26px;
-    animation: anim 5s linear infinite;
+    animation: anim 8s linear infinite;
 }
  @keyframes anim{
     0% {
@@ -479,6 +479,9 @@
 }
 .social-imgs {
     width: 50px;
+}
+.social-imgs:hover {
+  background-color: gray;
 }
 .social-lists {
     /*margin-top: 35px;*/
