--- a/geolab/css/style.css
+++ b/geolab/css/style.css
@@ -479,9 +479,11 @@
 }
 .social-imgs {
     width: 50px;
+    transition: 0.3s;
 }
 .social-imgs:hover {
   background-color: gray;
+  transition: 0.3s;
 }
 .social-lists {
     /*margin-top: 35px;*/
