--- a/geolab/css/style.css
+++ b/geolab/css/style.css
@@ -950,6 +950,13 @@
   .form-signup p{
     bottom: 70px;
   }
+  @keyframes anim{
+    0% {
+        transform: translateX(150%);
+    }
+    100%{
+        transform: translateX(-450%);
+    }
 }
 @media only screen and (max-width: 470px) {
     .burger-lists {
