--- a/sec/css/style.css
+++ b/sec/css/style.css
@@ -145,9 +145,11 @@ body {
     margin-left: 0px;
 }
 .burger-menu {
-    transition: .3s ;
+    transition: .9s ;
     position: absolute;
     margin-left: -100%;
+    width: 100%;
+    height: 100%;
 }
 .burger-menu-child {
 	padding-top: 80px;
