--- a/scss/scss/variable.scss
+++ b/scss/scss/variable.scss
@@ -4,6 +4,7 @@ $default-black: #000;
 $default-red:  #ff0404;
 $default-green: #21846b;
 $default-yellow: #a7c937;
+$default-yellowx2: #fadb14;
 $default-green-bold: #153a3d;
 $default-green-bold-x2: #0a383d;
 
