--- a/scss/scss/page/banner.scss
+++ b/scss/scss/page/banner.scss
@@ -4,7 +4,7 @@
         .over-banner {
             align-items: center;
             position: absolute;
-            z-index: 200;
+            z-index: 2;
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
@@ -18,5 +18,61 @@
                  margin-top: 25px;
              }
         }
+        .chating{
+            height: 90px;
+            width: 100px;
+            border-radius: 20%;
+            z-index: 90;
+            background-color: white;
+            top: 40%;
+            position: fixed;
+            right: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center; 
+            cursor: pointer;
+            .chat-icon {
+                width: 30px;
+            }
+            .chat-title {
+                width: 80px;
+                text-align: center;
+                margin-top: 10px;
+            }
+        }
     }
 }
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  .banner-buttons {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+  }
+  @-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
