--- a/scss/scss/page/responsive.scss
+++ b/scss/scss/page/responsive.scss
@@ -1,3 +1,11 @@
+@media only screen and (max-width : 1200px){
+    .center {
+        width: 95%;
+    }
+     .sail {
+        right: -30px;
+     }
+}
 @media only screen and (max-width : 1100px) {
     .burger {
         display: block;
@@ -8,5 +16,4 @@
     .finder {
         display: none;
     }
-
 }
