--- a/scss/scss/style.scss
+++ b/scss/scss/style.scss
@@ -7,3 +7,7 @@
 @import "page/responsive";
 @import "page/head";
 @import "page/banner";
+@import "chatbox";
+@import "page/sailing";
+@import "page/aboutUs";
+@import "page/agents";
