--- a/scss/scss/page/responsive.scss
+++ b/scss/scss/page/responsive.scss
@@ -17,3 +17,119 @@
         display: none;
     }
 }
+@media only screen and (max-width : 1000px){
+    .map-child {
+        flex-wrap: wrap; 
+    }
+    .web-map .map-child .list {
+        flex: 0 1 45%;
+    }
+    .seilings{
+        flex-wrap: wrap;
+    }
+    .center {
+        width: 92%!important;
+    }
+    .seilings .lists {
+        &:nth-child(4){
+            margin: 0 auto!important;
+        }
+    }
+}
+@media only screen and (max-width : 770px) {
+    .web-map .map-child {
+        flex-direction: column!important;
+        align-items: center;
+    }
+    .web-map .map-child .list {
+        margin-top: 30px!important;
+        &:nth-child(2){
+            margin-top: 120px!important;
+        }
+    }
+    .web-map .map-child h2 {
+        text-align: center!important;
+    }
+    .about-us .over-view-img .text {
+        padding: 140px 10px!important;
+    }
+    .agents .portal .left-agents {
+        width: 100%!important;
+        opacity: 0.8;
+    }
+    .agents .portal .right-agents{
+        display: none!important;
+    }
+    .about-us .over-view-img {
+        width: 100%!important;
+    }
+    .agents .portal .left-agents .for-bq {
+        padding: 20px 10px!important;
+    }
+}
+@media only screen and (max-width : 650px) {
+    .seilings .sail{
+        right: 100px!important;
+    }
+    .seilings .lists {
+        
+            flex: 0 1 100%!important;
+            align-items: center!important;
+    }
+}
+@media only screen and (max-width : 580px) {
+    .head .left-block .lists a img{
+        transition: 0.5s;
+        &:hover {
+            background-color: $default-white;
+            transition: 0.5s;
+        }
+    }
+    .head .left-block .lists a span {
+        display: none;
+    }
+    .map-child {
+        justify-content: center;
+    }
+        .web-map .map-child .list {
+            margin-top: 30px;
+            flex: 0 1 100%;
+            align-items: center;
+            font-size: 16px;
+            margin-top: 20px;
+            margin-bottom: 0px;
+        }
+        .web-map .map-child .list:nth-child(3) {
+            margin-top: 0px;
+        }
+        .web-map .map-child a {
+            font-size: 16px;
+        }
+        .center {
+            width: 90%!important;
+        }
+}
+@media only screen and (max-width : 470px) {
+    .banner-section .banner .slideshow-container .fade .over-banner h1,
+    .banner-section .banner .slideshow-container .fade .over-banner h1 .next {
+        font-size: 30px!important;
+    }
+    .banner-section .banner .slideshow-container .fade .over-banner .down-text {
+        font-size: 12px!important;
+        width: 200px!important;
+        margin-top: 5px!important;
+    }
+    .banner-section .banner .chating {
+        height: 70px!important;
+        width: 65px!important;
+    }
+    .banner-section .banner .chating .chat-title{
+        font-size: 14px!important;
+    }
+    .chatboxes.active{
+        right: 40px!important;
+    }
+    .banner-section .banner .over-banner {
+        top: 45%!important;
+    }
+}
