--- a/asigen/scss/page/responsive.scss
+++ b/asigen/scss/page/responsive.scss
@@ -6,6 +6,16 @@
         right: -30px;
      }
 }
+@media only screen and (min-width : 1100px) {
+    .burger-menu{
+    transition: .3s!important;
+    position: absolute!important;
+    margin-left: -100%!important;
+    background-color: rgba($color: $default-blue, $alpha: 0.7)!important;
+    height:100%!important;
+    top: 120px!important;
+    }
+}
 @media only screen and (max-width : 1100px) {
     .burger {
         display: block;
@@ -140,5 +150,8 @@
     }
     .banner-section .banner .over-banner {
         top: 45%!important;
+    }
+    .burger-menu .ul .list a {
+        font-size: 20px!important;
     }
 }
