--- a/asigen/scss/page/main.scss
+++ b/asigen/scss/page/main.scss
@@ -127,7 +127,7 @@ body {
     margin-left: -100%;
     background-color: rgba($color: $default-blue, $alpha: 0.7);
     height:100%;
-    top: 100px;
+    top: 120px;
     &.active{
         transition: .3s;
         visibility: visible;
@@ -146,13 +146,22 @@ body {
             .list{
                 margin-top: 20px;
                 a {
-                    color: $default-black;
+                    font-size: 30px;
+                    color: $default-white;
                     transition: 0.3s;
                     &:hover {
-                        color: $default-red;
+                        color: $default-yellowx2;
                         transition: 0.3s;
                     }
                 }
+               }
+               .finder2{
+                @extend .border-radius;
+                background-color: transparent;
+                top: 3px;
+                width: 170px; 
+                position: relative;
+                transform: translateX(15%);
                }
         }
 }
